aggiunte sezioni con articoli

--- a/index.html
+++ b/index.html
@@ -19,13 +19,22 @@
         <!-- Corpo pagina -->
         <main>
             <div id="red" class="container">
-
+                <div class="article">
+                    <img src="img/01.png" class="scarpa">
+                    <h2 class="desc">Il nostro modello di punta</h2>
+                </div>
             </div>
             <div id="green" class="container">
-
-            </div>
+                <div class="article">
+                    <img src="img/02.png" class="scarpa">
+                    <h2 class="desc">Il nostro modello di punta</h2>
+                </div>
+            </div>    
             <div id="yellow" class="container">
-
+                <div class="article">
+                    <img src="img/03.png" class="scarpa">
+                    <h2 class="desc">Il nostro modello di punta</h2>
+                </div>
             </div>
         </main>
         <!-- /Corpo pagina -->
