--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     </head>
     <body>
         <!-- Menu fisso -->
-        <nav>
-
+        <nav id="menu">
+            <ul>
+                <li><a href="#red">1</a></li>
+                <li><a href="#green">2</a></li>
+                <li><a href="#yellow">3</a></li>
+            </ul>
         </nav>
         <!-- /Menu fisso -->
 
